--- a/style/_quizAdpLayout.scss
+++ b/style/_quizAdpLayout.scss
@@ -2,9 +2,9 @@
 	.threeUp  {
 		width: 32.5%;
 		p {
-			height: 90px;
-			font-size: 0.95em;
-			margin: 4px;
+			height: 100px;
+			font-size: 0.9em !important;
+			margin: 4px !important;
 		}
 	}
 	.twoUp p,
@@ -24,7 +24,7 @@
 }
 @media (max-width: 600px){
 	.questionAnswers p {
-		line-height: 1.25;
+		line-height: 1.2 !important;
 	}
 }
 @media (min-width: 480px) {
